2008-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidReturningArraysOnPropertiesRule.cs: New. Rule to warn for 
	properties that returns arrays. By Adrian Tsai.
	* Gendarme.Rules.Performance.xml.in: Add rule description.
	* Gendarme.Rules.Performance.mdp: Add rule to MonoDevelop project 
	file.
	* Makefile.am: Add rule and tests to the build.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParameterRule.cs: If the method is anonymous then, gendarme
	will skip it.

2007-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesRule.cs: Reworked to make the
	rule works with all types defined in the assembly. Information for
	each assembly is cached to speed up searches.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesRule.cs: Reworked to check for
	the more general CompilerGeneratedAttribute (removing the direct 
	check required for <PrivateImplementationDetails>). Refactor to 
	reduce code duplication for checking attributes.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUninstantiatedInternalClassesRule.cs: Ignore special types 
	like <Module> and <PrivateImplementationDetails>. Also check for
	nested types (like array defs) and use constants instead of strings.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUncalledPrivateCodeRule: Allow if the method is a compiler
	generated method.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Allow unused private ctor.
	* AvoidUnusedParametersRule.cs: Add checks for Ldarga[_S] IL opcodes.
	Don't create a MessageCollection unless we have at least one message
	to return to the runner.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Don't report unused code for
	explicit interface implementation.
	* Makefile.am: Use nunit-console2 to run tests

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 
