@@ -6,7 +6,7 @@
 //	Sebastien Pouliot  <sebastien@ximian.com>
 //
 // Copyright (c) <2007> Nidhi Rawal
-// Copyright (C) 2007 Novell, Inc (http://www.novell.com)
+// Copyright (C) 2007-2008 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -31,6 +31,7 @@ using System;
 using Mono.Cecil;
 using Mono.Cecil.Cil;
 using Gendarme.Framework;
+using Gendarme.Framework.Rocks;
 
 namespace Gendarme.Rules.Performance {
 
@@ -39,17 +40,7 @@ namespace Gendarme.Rules.Performance {
 		// we should move these methods into an helper class (e.g. MethodHelper)
 		// and reuse them in other rules
 
-		public bool IsStaticConstructor (MethodDefinition md)
-		{
-			return (md.IsStatic && md.IsConstructor);
-		}
-
-		public bool IsEntryPoint (MethodDefinition md)
-		{
-			return (md == md.DeclaringType.Module.Assembly.EntryPoint);
-		}
-
-		public bool IsSerializationConstructor (MethodDefinition md)
+		public static bool IsSerializationConstructor (MethodDefinition md)
 		{
 			if (!md.IsConstructor || (md.Parameters.Count != 2))
 				return false;
@@ -60,40 +51,7 @@ namespace Gendarme.Rules.Performance {
 			return (md.Parameters[1].ParameterType.Name == "System.Runtime.Serialization.StreamingContext");
 		}
 		
-		// static [void|int] Main ()
-		// static [void|int] Main (string[] args)
-		public bool IsMain (MethodDefinition md)
-		{
-			// Main must be static
-			if (!md.IsStatic)
-				return false;
-
-			if (md.Name != "Main")
-				return false;
-
-			// Main must return void or int
-			switch (md.ReturnType.ReturnType.Name) {
-			case "Void":
-			case "Int":
-				// ok, continue checks
-				break;
-			default:
-				return false;
-			}
-
-			switch (md.Parameters.Count) {
-			case 0 :
-				// Main (void)
-				return true;
-			case 1:
-				// Main (string[] args)
-				return (md.Parameters[0].ParameterType.Name == "String[]");
-			default:
-				return false;
-			}
-		}
-
-		public bool IsExplicitImplementationOfInterface (MethodDefinition method)
+		public static bool IsExplicitImplementationOfInterface (MethodDefinition method)
 		{
 			// quick out if the name doesn't include a .
 			if (!method.Name.Contains ("."))
@@ -107,33 +65,25 @@ namespace Gendarme.Rules.Performance {
 			return false;
 		}
 		
-		public bool IsGeneratedByCompiler (MethodDefinition method)
-		{
-			foreach (CustomAttribute custom in method.CustomAttributes) {
-				if (custom.Constructor.DeclaringType.FullName == "System.Runtime.CompilerServices.CompilerGeneratedAttribute")
-					return true;
-			}
-			return false;
-		}
-
 		//
 
 		public MessageCollection CheckMethod (MethodDefinition method, Runner runner)
 		{
 			// #1 - rule doesn't apply to static ctor
-			if (IsStaticConstructor (method))
+			if (method.IsStatic && method.IsConstructor)
 				return runner.RuleSuccess;
 
 			// #2 - rule doesn't apply if the method is the assembly entry point
-			if (IsEntryPoint (method))
+			if (method.IsEntryPoint ())
 				return runner.RuleSuccess;
 
-			if (IsMain (method))
+			// #3 - rule doesn't apply to Main
+			if (method.IsMain ())
 				return runner.RuleSuccess;
 
 			// #4 - rule doesn't apply if the method is generated by
 			// the compiler.
-			if (IsGeneratedByCompiler (method))
+			if (method.IsCompilerGenerated ())
 				return runner.RuleSuccess;
 
 			// ok, the rule applies
@@ -170,7 +120,7 @@ namespace Gendarme.Rules.Performance {
 			return runner.RuleSuccess;
 		}
 
-		private bool CheckAssemblyForMethodUsage (AssemblyDefinition ad, MethodDefinition md)
+		private static bool CheckAssemblyForMethodUsage (AssemblyDefinition ad, MethodDefinition md)
 		{
 			// scan each module
 			foreach (ModuleDefinition module in ad.Modules) {
@@ -183,7 +133,7 @@ namespace Gendarme.Rules.Performance {
 			return false;
 		}
 
-		private bool CheckTypeForMethodUsage (TypeDefinition td, MethodDefinition md)
+		private static bool CheckTypeForMethodUsage (TypeDefinition td, MethodDefinition md)
 		{
 			// check every constructor for the type
 			foreach (MethodDefinition ctor in td.Constructors) {
@@ -204,7 +154,7 @@ namespace Gendarme.Rules.Performance {
 			return false;
 		}
 
-		private bool CheckMethodUsage (MethodDefinition method, MethodDefinition md)
+		private static bool CheckMethodUsage (MethodDefinition method, MethodDefinition md)
 		{
 			if (!method.HasBody)
 				return false;
